# aocr

./: .gitignore  README.md
aoc_2015/: Cargo.toml  justfile
aoc_2015/aoc_core/: Cargo.toml
aoc_2015/aoc_core/src/: lib.rs
aoc_2015/daily_template/: Cargo.toml
aoc_2015/daily_template/src/: main.rs  solution.rs
aoc_2015/day_01/: Cargo.toml
aoc_2015/day_01/src/: main.rs  solution.rs
aoc_2015/day_02/: Cargo.toml
aoc_2015/day_02/src/: main.rs  solution.rs
aoc_2015/day_03/: Cargo.toml
aoc_2015/day_03/src/: main.rs  solution.rs
aoc_2015/macros/: Cargo.toml
aoc_2015/macros/src/: lib.rs
aoc_2015/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayx.rs  input.rs  lib.rs  main.rs  set.rs
