[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
derive_more = { version = "1.0.0", features = ["from", "display"] }
itertools = "0.13.0"
md5 = "0.7.0"
nom = "7.1.3"
once_cell = "1.20.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rstest = "0.23.0"
