[package]
name = "day_03"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aoc_core.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
ctor.workspace = true
macros.workspace = true

[dev-dependencies]
predicates.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
